web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__group__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nsort join_date\ntake 1\n"
---
SELECT
  *
FROM
  employees
ORDER BY
  join_date
LIMIT
  1
