web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__group__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\ngroup role (\n  sort join_date  # taken from above\n  take 1\n)\n"
snapshot_kind: text
---
WITH table_0 AS (
  SELECT
    *,
    ROW_NUMBER() OVER (
      PARTITION BY role
      ORDER BY
        join_date
    ) AS _expr_0
  FROM
    employees
)
SELECT
  *
FROM
  table_0
WHERE
  _expr_0 <= 1
